[gd_scene load_steps=10 format=3 uid="uid://d3ydmk2ud52ve"]

[ext_resource type="Theme" uid="uid://dia3w5hs8qno8" path="res://Assets/GuiThemes/MainTheme.tres" id="1"]
[ext_resource type="Script" path="res://Frames/AccountMenu/AccountMenu.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ba0f43yyknuis" path="res://Assets/Sprites/Backgrounds/space background.png" id="3"]
[ext_resource type="PackedScene" uid="uid://gh60igbjn2oi" path="res://Scenes/Particles/Stars/particles.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://cme36b6m2os3v" path="res://Assets/Sprites/Backgrounds/blackborders.png" id="5"]
[ext_resource type="PackedScene" uid="uid://d1jnjxxdelhgt" path="res://Scenes/GuiScenes/Blueprints/Animation.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://s7qgfbeil2y6" path="res://Assets/Gui/Title.png" id="7"]
[ext_resource type="Script" path="res://Frames/World/Notifications.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://cdyj810446uuk" path="res://Frames/banner_credits.tscn" id="8_2tv6w"]

[node name="AccountMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 270)
theme = ExtResource("1")
script = ExtResource("2")

[node name="SpaceBackground" type="Sprite2D" parent="."]
position = Vector2(512, 270)
texture = ExtResource("3")

[node name="Particles" parent="." instance=ExtResource("4")]

[node name="Blackborders" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(480, 270)
texture = ExtResource("5")

[node name="Credentials" type="TabContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -102.0
offset_right = 146.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(144, 102)

[node name="Login" type="Control" parent="Credentials"]
layout_mode = 2

[node name="UsernameEdit" type="LineEdit" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 253.0
offset_bottom = 51.0
placeholder_text = "Enter a username"
alignment = 1
max_length = 32
context_menu_enabled = false

[node name="PasswordEdit" type="LineEdit" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 67.0
offset_right = 253.0
offset_bottom = 99.0
placeholder_text = "Enter a password"
alignment = 1
max_length = 256
context_menu_enabled = false
secret = true
secret_character = "*"

[node name="UsernameLabel" type="Label" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 1.0
offset_right = 252.0
offset_bottom = 21.0
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLabel" type="Label" parent="Credentials/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 48.0
offset_right = 252.0
offset_bottom = 71.0
text = "Password
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginButton" type="Button" parent="Credentials/Login"]
layout_mode = 0
offset_left = 177.0
offset_top = 119.0
offset_right = 272.0
offset_bottom = 147.0
focus_mode = 0
text = " Login
"

[node name="HelpButton" type="Button" parent="Credentials/Login"]
layout_mode = 0
offset_left = -2.0
offset_top = 119.0
offset_right = 110.0
offset_bottom = 147.0
focus_mode = 0
disabled = true
text = " Need help?"

[node name="RememberMe" type="CheckBox" parent="Credentials/Login"]
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = 164.0
offset_right = 14.0
offset_bottom = 188.0
text = "Remember me"

[node name="Create" type="Control" parent="Credentials"]
visible = false
layout_mode = 2

[node name="UsernameEdit" type="LineEdit" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 253.0
offset_bottom = 51.0
placeholder_text = "Enter a username"
alignment = 1
max_length = 32
context_menu_enabled = false

[node name="PasswordEdit" type="LineEdit" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_top = 67.0
offset_right = 253.0
offset_bottom = 99.0
placeholder_text = "Enter a password"
alignment = 1
max_length = 256
context_menu_enabled = false
secret = true
secret_character = "*"

[node name="UsernameLabel" type="Label" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_right = 252.0
offset_bottom = 23.0
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordLabel" type="Label" parent="Credentials/Create"]
layout_mode = 0
offset_left = 18.0
offset_top = 48.0
offset_right = 252.0
offset_bottom = 71.0
text = "Password
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreateButton" type="Button" parent="Credentials/Create"]
layout_mode = 0
offset_left = 177.0
offset_top = 119.0
offset_right = 272.0
offset_bottom = 147.0
focus_mode = 0
text = " Create"

[node name="HelpButton" type="Button" parent="Credentials/Create"]
layout_mode = 0
offset_left = -2.0
offset_top = 119.0
offset_right = 110.0
offset_bottom = 147.0
focus_mode = 0
disabled = true
text = " Need help?"

[node name="AnimationPlayer" parent="Credentials" instance=ExtResource("6")]
root_node = NodePath("../..")

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 384.0
offset_right = 960.0
offset_bottom = 458.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(487, 76)
scale = Vector2(1.475, 1.475)
texture = ExtResource("7")

[node name="CloseButton" type="Button" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.5
offset_top = -46.0
offset_right = 45.5
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="Label" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 5.0
offset_top = 494.0
offset_right = 251.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 20
text = "Alpha Version 1.0
Original Game by RaoK, Adam, & 8Bit"

[node name="Label2" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = 709.0
offset_top = 480.0
offset_right = 955.0
offset_bottom = 540.0
theme_override_font_sizes/font_size = 17
text = "Rewritten by Orago
Godot 4 Port by Walid
Godot 3 Remake by Sundae and Walid"
horizontal_alignment = 2

[node name="BannerCredits" parent="." instance=ExtResource("8_2tv6w")]

[node name="Notifications" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -270.0
offset_bottom = 270.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("8")

[node name="VBoxContainer" type="VBoxContainer" parent="Notifications"]
layout_mode = 1
anchors_preset = -1
anchor_left = -4.424
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0480347
offset_bottom = -142.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 35
alignment = 2

[connection signal="pressed" from="Credentials/Login/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Credentials/Create/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
